--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,11 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              {
+                "input": "node_modules/document-register-element/build/document-register-element.js"
+              }
+            ]
           },
           "configurations": {
             "production": {
@@ -118,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ng-shared-components"
 }
