--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "ng-shared-components",
+  "name": "ng-shared-components-yee",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:elements": "ng build --output-hashing=none && node elements-build.js",
+    "build:elements": "ng build --prod --output-hashing=none && node elements-build.js",
+    "build-shared": "ng build --prod --single-bundle true --keep-polyfills",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:externals": "ng build --extra-webpack-config webpack.externals.js --prod --single-bundle",
+    "build:ng-shared-components:externals": "ng build --extra-webpack-config webpack.externals.js --prod --project ng-shared-components --single-bundle true"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "~9.0.0-rc.8",
+    "@angular/common": "~9.0.0-rc.8",
+    "@angular/compiler": "~9.0.0-rc.8",
+    "@angular/core": "~9.0.0-rc.8",
+    "@angular/elements": "^9.0.0-rc.8",
+    "@angular/forms": "~9.0.0-rc.8",
+    "@angular/platform-browser": "~9.0.0-rc.8",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.8",
+    "@angular/router": "~9.0.0-rc.8",
     "@webcomponents/custom-elements": "^1.3.2",
+    "@webcomponents/webcomponentsjs": "^2.4.1",
     "concat": "^1.0.3",
     "document-register-element": "^1.7.2",
     "fs-extra": "^8.1.0",
+    "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.5.4",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
-    "@angular/cli": "~8.3.22",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "~0.900.0-rc.8",
+    "@angular/cli": "~9.0.0-rc.8",
+    "@angular/compiler-cli": "~9.0.0-rc.8",
+    "@angular/language-service": "~9.0.0-rc.8",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -48,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.6.4"
   }
 }
